samples/_failures_safe/1761284586_931df6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12df7074.c: In function ‘main’:
./samples/SAFE/__tmp_12df7074.c:143:15: error: expected ‘)’ at end of input
  143 |     if (strlen
      |        ~      ^
      |               )
./samples/SAFE/__tmp_12df7074.c:143:5: error: expected declaration or statement at end of input
  143 |     if (strlen
      |     ^~
